--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="vendor/css/main.css">
   </head>
   <body class="text-center">
-    <form class="form-signin" method="POST" action="funcoes.php">
+    <form class="form-signin" method="POST" action="./vendor/funcoes.php">
       <img class="mb-4" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR4SdvpxJlSY1IUWJJ2oFlipGY9dqmV7BCiYQ&usqp=CAU" alt="" width="72" height="72">
       <h1 class="h3 mb-3 font-weight-normal">Efetue login</h1>
       <input type="text" id="usuario" name="usuario"class="form-control" placeholder="Usuário" required autofocus>
